--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="16dp"
-                android:text="김지은 님"
+                android:text=""
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
@@ -71,7 +71,7 @@
                 android:id="@+id/dateText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="200dp"
+                android:layout_marginLeft="190dp"
                 android:layout_marginTop="16dp"
                 android:text="2019 . 11 . 10 "
                 android:textColor="@color/white"
@@ -113,70 +113,74 @@
         android:orientation="vertical"
         android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/dataInputBtn"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_home"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_person_data"
             android:drawableEnd="@drawable/ic_navigator_profile"
             android:drawablePadding="-30dp"
             android:onClick="clickInputMydata"
             android:paddingLeft="40dp"
             android:text="@string/dataInputBtnText"
-            android:textColor="#F3B14F"
-            android:textSize="16sp"
+            android:textColor="@color/home_navi_color"
+            android:textSize="18sp"
+            android:paddingRight="15dp"
             android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/predictBtn"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_home"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_neural_network1"
             android:drawableEnd="@drawable/ic_navigator_predict"
             android:drawablePadding="-30dp"
             android:onClick="clickMyPredict"
             android:paddingLeft="30dp"
+            android:paddingRight="15dp"
             android:text="@string/predictBtnText"
-            android:textColor="@color/predict_color"
-            android:textSize="16sp"
+            android:textColor="@color/home_navi_color"
+            android:textSize="18sp"
             android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/bpmBtn"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_home"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_heart"
             android:drawableEnd="@drawable/ic_navigator_bpm"
             android:drawablePadding="30dp"
             android:onClick="clickHeart"
             android:paddingLeft="40dp"
             android:text="@string/bpmBtnText"
-            android:textColor="@color/bpm_color"
-            android:textSize="16sp"
+            android:textColor="@color/home_navi_color"
+            android:textSize="18sp"
+            android:paddingRight="15dp"
             android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/aedBtn"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_home"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_map"
             android:drawableEnd="@drawable/ic_navigator_aed"
             android:drawablePadding="-30dp"
             android:onClick="clickAed"
             android:paddingLeft="40dp"
             android:text="@string/aedBtnText"
-            android:textColor="@color/aed_color"
-            android:textSize="16sp"
+            android:textColor="@color/home_navi_color"
+            android:textSize="18sp"
+            android:paddingRight="15dp"
             android:textStyle="bold"></Button>
     </LinearLayout>
     <!--<Button
