--- a/app/src/main/res/layout/userdata_input.xml
+++ b/app/src/main/res/layout/userdata_input.xml
@@ -28,6 +28,7 @@
         android:background="@drawable/button2"
         android:text="저장하기"
         android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -180,7 +181,7 @@
         android:id="@+id/smokeSelect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="24dp"
         android:checkedButton="@id/Nonsmoker"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@+id/checkView"
@@ -232,7 +233,7 @@
         android:id="@+id/btnHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/button3"
         android:onClick="clickHeight"
         android:text="cm"
@@ -245,7 +246,7 @@
         android:id="@+id/btnAplo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button3"
         android:onClick="clickAplo"
         android:text="mmHg"
@@ -258,7 +259,7 @@
         android:id="@+id/btnChol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button3"
         android:onClick="clickChol"
         android:text="mg/dl"
@@ -271,7 +272,7 @@
         android:id="@+id/btnWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button3"
         android:onClick="clickWeight"
         android:text="kg"
