--- a/app/src/main/res/layout/activity_heart.xml
+++ b/app/src/main/res/layout/activity_heart.xml
@@ -14,14 +14,22 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme">
-        <Button
+        <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="심박수 측정"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:letterSpacing="0.1"
+            android:layout_marginStart="30dp"/>-->
+        <!--<Button
             android:id="@+id/questionBtn"
-            android:layout_marginLeft="310dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginLeft="170dp"
+            android:layout_marginTop="7dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/question_mark_btn">
-        </Button>
+        </Button>-->
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -29,9 +37,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -39,53 +49,65 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_marginTop="50dp"
-                    android:textSize="18dp"
-                    android:id="@+id/textMon"
-                    android:text="2019 년 11 월 16 일 12 : 29 AM  "
-                    android:visibility="gone"
-                    android:textStyle="bold"
-                    android:textColor="@color/maincolor1"
-                    android:textAlignment="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
                 <ImageView
                     android:id="@+id/fingerImage"
                     android:layout_width="330dp"
                     android:layout_height="250dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    android:src="@drawable/phone_image"
+                    android:src="@drawable/hand"
                     android:visibility="visible">
 
                 </ImageView>
+
+                <TextView
+                    android:id="@+id/textMon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:text="2019 년 11 월 16 일 12 : 29 AM  "
+                    android:textAlignment="center"
+                    android:textColor="@color/maincolor1"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/beatLayout"
-                android:visibility="gone"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/beatanim"
-                    android:layout_marginTop="150dp"
                     android:layout_width="400dp"
+                    android:layout_height="280dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_height="300dp"
+                    android:layout_marginTop="120dp"
                     app:srcCompat="@drawable/heart_rate" />
+                <TextView
+                    android:layout_marginTop="-20dp"
+                    android:textColor="#808080"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.1"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Waiting please. . .">
+
+                </TextView>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/end_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="80dp"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -142,7 +164,7 @@
                     android:layout_width="370dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="55dp"
+                    android:layout_marginTop="70dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -176,8 +198,9 @@
                                 android:layout_marginLeft="10dp"
                                 android:background="@drawable/icon_stable"
                                 android:button="@color/empty"
-                                android:text="Stable"
-                                android:textColor="@color/empty"></RadioButton>
+                                android:text="안정"
+                                android:textColor="@color/empty"
+                                android:textStyle="bold"></RadioButton>
 
                             <RadioButton
                                 android:id="@+id/exciteBtn"
@@ -186,8 +209,9 @@
                                 android:layout_marginLeft="10dp"
                                 android:background="@drawable/icon_excite"
                                 android:button="@color/empty"
-                                android:text="Excite"
-                                android:textColor="@color/empty"></RadioButton>
+                                android:text="흥분"
+                                android:textColor="@color/empty"
+                                android:textStyle="bold"></RadioButton>
 
                             <RadioButton
                                 android:id="@+id/runningBtn"
@@ -196,8 +220,9 @@
                                 android:layout_marginLeft="10dp"
                                 android:background="@drawable/icon_running"
                                 android:button="@color/empty"
-                                android:text="Run"
-                                android:textColor="@color/empty"></RadioButton>
+                                android:text="운동"
+                                android:textColor="@color/empty"
+                                android:textStyle="bold"></RadioButton>
 
                             <RadioButton
                                 android:id="@+id/depressBtn"
@@ -206,8 +231,9 @@
                                 android:layout_marginLeft="10dp"
                                 android:background="@drawable/icon_depress"
                                 android:button="@color/empty"
-                                android:text="Depres"
-                                android:textColor="@color/empty"></RadioButton>
+                                android:text="우울"
+                                android:textColor="@color/empty"
+                                android:textStyle="bold"></RadioButton>
 
                             <RadioButton
                                 android:id="@+id/sleepBtn"
@@ -216,8 +242,9 @@
                                 android:layout_marginLeft="10dp"
                                 android:background="@drawable/icon_sleep"
                                 android:button="@color/empty"
-                                android:text="Sleep"
-                                android:textColor="@color/empty"></RadioButton>
+                                android:text="피곤"
+                                android:textColor="@color/empty"
+                                android:textStyle="bold"></RadioButton>
 
                         </RadioGroup>
                     </LinearLayout>
@@ -227,7 +254,7 @@
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="60dp"
+                        android:layout_marginTop="90dp"
                         android:layout_weight="1"
                         android:orientation="horizontal"
                         android:visibility="gone">
@@ -273,11 +300,12 @@
 
                 <LinearLayout
                     android:id="@+id/firstBtn_layout"
-                    android:layout_marginTop="50dp"
-                    android:visibility="visible"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
                     <Button
                         android:id="@+id/btnStart"
                         android:layout_width="300dp"
@@ -289,8 +317,9 @@
                         android:background="@drawable/button2"
                         android:padding="15dp"
                         android:text="BPM  측정하기"
-                        android:textStyle="bold"
                         android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         android:typeface="normal" />
 
                     <Button
@@ -305,12 +334,12 @@
                         android:padding="15dp"
                         android:text="심박수 기록"
                         android:textColor="@color/maincolor1"
+                        android:textSize="16sp"
                         android:textStyle="bold"
                         android:typeface="normal" />
 
                 </LinearLayout>
             </LinearLayout>
-
 
 
         </LinearLayout>
