--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -17,7 +17,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                     android:id="@+id/time_layout"
                     android:layout_width="330dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="13dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginRight="3dp"
                     android:layout_weight=".28"
                     android:background="@drawable/spinner_border"
@@ -67,7 +67,7 @@
                     android:layout_width="330dp"
                     android:layout_height="50dp"
                     android:layout_marginRight="13dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="18dp"
                     android:layout_weight=".28"
                     android:background="@drawable/spinner_border"
                     android:orientation="horizontal">
@@ -203,7 +203,7 @@
                 android:id="@+id/listView"
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="500dp">
+                android:layout_height="600dp">
             </ListView>
 
 
