--- a/app/src/main/res/layout/data_check.xml
+++ b/app/src/main/res/layout/data_check.xml
@@ -268,6 +268,7 @@
         android:onClick="clickPredict"
         android:text="예측하기"
         android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -280,6 +281,7 @@
         android:onClick="clickChange"
         android:text="수정하기"
         android:textColor="@color/maincolor1"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.328"
