--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,12 +13,7 @@
     <color name="maincolor2">#dcdcdc</color>
 
 
-    <color name="profile_color">#F3B14F</color>
-    <color name="predict_color">#6FBCE8</color>
-    <color name="bpm_color">#F952A3</color>
-    <color name="aed_color">#71D479</color>
-
-
+    <color name="home_navi_color">#303030</color>
 
     <color name="empty">@android:color/transparent</color>
     <color name="black">#000000</color>
