add button design

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -122,7 +122,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_person_data"
-            android:drawableEnd="@drawable/ic_navigator_profile"
+            android:drawableEnd="@drawable/ic_navigator"
             android:drawablePadding="-30dp"
             android:onClick="clickInputMydata"
             android:paddingLeft="40dp"
@@ -139,7 +139,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_neural_network1"
-            android:drawableEnd="@drawable/ic_navigator_predict"
+            android:drawableEnd="@drawable/ic_navigator"
             android:drawablePadding="-30dp"
             android:onClick="clickMyPredict"
             android:paddingLeft="30dp"
@@ -156,7 +156,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_heart"
-            android:drawableEnd="@drawable/ic_navigator_bpm"
+            android:drawableEnd="@drawable/ic_navigator"
             android:drawablePadding="30dp"
             android:onClick="clickHeart"
             android:paddingLeft="40dp"
@@ -173,7 +173,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/home_navi"
             android:drawableStart="@drawable/ic_noun_map"
-            android:drawableEnd="@drawable/ic_navigator_aed"
+            android:drawableEnd="@drawable/ic_navigator"
             android:drawablePadding="-30dp"
             android:onClick="clickAed"
             android:paddingLeft="40dp"
