--- a/app/src/main/res/drawable/home_navi.xml
+++ b/app/src/main/res/drawable/home_navi.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="#FAF1F1"/>
-            <gradient android:angle="45"
+            <solid android:color="#ffffff"/>
+            <!--<gradient android:angle="45"
                 android:centerColor="#FABEBB"
                 android:endColor="@color/maincolor1"
-                android:startColor="#FAF1F1"/>
+                android:startColor="#FAF1F1"/>-->
             <corners
                 android:radius="25dp" />
             <padding
@@ -19,13 +19,17 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/maincolor2"/>
+            <solid android:color="@color/maincolor1"/>
             <corners
                 android:radius="25dp" />
             <gradient android:angle="45"
+                android:centerColor="#FABEBB"
+                android:endColor="@color/maincolor1"
+                android:startColor="#FAF1F1"/>
+           <!-- <gradient android:angle="45"
                 android:centerColor="#ECECEC"
                 android:endColor="@color/maincolor2"
-                android:startColor="#ffffff"/>
+                android:startColor="#ffffff"/>-->
         </shape>
     </item>
 </selector>
